tests/baselines/reference/aliasBug.errors.txt
==== tests/cases/compiler/aliasBug.ts (1 errors) ====
    
    module foo {    
        export class Provide {
        }
    
        export module bar { export module baz {export class boo {}}}
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    
    var p = new provide.Provide();
    
    function use() {
      var p1: provide.Provide; // error here, but should be okay
      var p2: foo.Provide;
      var p3:booz.bar;
                  ~~~
!!! aliasBug.ts(17,15): error TS2094: The property 'bar' does not exist on value of type 'foo.bar.baz'.
      var p22 = new provide.Provide();
    }
    